--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,16 +3,26 @@ plugins {
     id 'com.google.gms.google-services'
 }
 
+
 android {
     namespace 'com.example.doctalk'
     compileSdk 33
+    packagingOptions {
+        pickFirst 'META-INF/INDEX.LIST'
+        pickFirst 'META-INF/DEPENDENCIES'
 
+//        exclude("META-INF/LICENSE.txt")
+//        exclude("META-INF/NOTICE.txt")
+//        exclude("META-INF/ASL2.0")
+//        exclude("META-INF/*.kotlin_module")
+   }
     defaultConfig {
         applicationId "com.example.doctalk"
         minSdk 19
         targetSdk 33
         versionCode 1
         versionName "1.0"
+        //multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -41,4 +51,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation 'com.google.firebase:firebase-analytics'
     implementation platform('com.google.firebase:firebase-bom:32.3.1')
+
+
 }
