--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.2.2'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.cloud:google-cloud-speech:1.29.1'
+    implementation 'com.google.auth:google-auth-library-credentials:1.3.0'
+    implementation 'com.google.auth:google-auth-library-oauth2-http:0.26.0'
+    implementation 'io.grpc:grpc-okhttp:1.38.1'
+    implementation 'io.grpc:grpc-stub:1.38.1'
     implementation platform('com.google.firebase:firebase-bom:32.3.1')
 
 
